stylesheet.css
body{
    margin: 0;
    background-color: #f39070;
    background-image: url(images/background.png);
    font-family: 'beattingvileregular', serif;
}
header{
    font-family: 'beattingvileregular', serif;
    background-color: #f39070;
    position: relative;
    color: #f5c7aa;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
    margin: 0;
    z-index: 1;
}
header p{
    font-size: 6rem;
}
.menu{
    position: absolute;
    width: 20%;
    background-color: transparent;
    padding: 1rem;
    right: 0;
    top: 0;
}
nav{
    position: absolute;
    right: 0;
    top: 100%;
    display: none;
}
nav a{
    font-size: 4rem;
    text-decoration: none;
    color: #f5c7aa;
    display: block;
    padding: 1rem 2rem;
    text-align: right;
    border: 1px solid #f5c7aa;
    background-color: #f39070;
}
.socials{
    display: flex;
}
@font-face {
    font-family: 'beattingvileregular';
    src: url('beattingvile-webfont.woff2') format('woff2'),
         url('beattingvile-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
.welcome p{
    font-size: 7rem;
    margin: 2rem;
}
p{
    font-size: 4rem;
    text-align: center;
    color: #862a0e;
}
.logo{
    color: #f5c7aa;
    margin: 0;
    padding: 1rem;
    text-align: left;
}
.show{
    display: block;
}
a{
    text-decoration: none;
    color: #f5c7aa;
}
button{
    font-family: 'beattingvileregular';
    width: 80%;
    font-size: 5rem;
    margin:  0  0 1rem 0;
    padding: .5rem 1rem;
    border-radius: .5rem;
    border: none;
    background-color: #e4805f;
    color: #f5c7aa;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
}
.facebook, .insta, .email{
    width: 60%;
    padding: .5rem;
    justify-content: center;
}
.resume, .portfolio{
    display: flex;
    justify-content: center;
}
.portfolio{
    margin: 1rem 0 0 0;
    font-size: 6rem;
}
.resume{
    margin: 1rem 0 0 0;
    font-size: 6rem;
}
footer{
    margin: 2.5rem 0 0 0;
    display: flex;
    justify-content: center;
}
footer a{
    display: flex;
    justify-content: center;
}
label{
    color: #862a0e;
    font-size: 4rem;
    display: block;
}
form{
    background-color: #fdd4b9;
    margin: 1rem;
    padding: 6rem 1rem 1rem 1rem;
    border-radius: .5rem;
}
input[type="text"], [type="email"]{
    padding: 1rem;
    width: 91.5%;
    border: none;
    border-radius: .5rem;
    background-color: #facca7;
    color: #862a0e;
    font-family: 'Avenir';
}
textarea{
    padding: 1rem;
    width: 91.5%;
    background-color: #facca7;
    border: none;
    font-family: 'Avenir';
    color: #862a0e;
}
.contact_label{
    background-color: #f8be8f;
    position: absolute;
    right: 2.5%;
    width: 95%;
    border-radius: .5rem;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
}
.contact_label p{
    margin: 1rem 1rem 0 1rem;
    padding: 0 2rem;
    font-size: 5rem;
}
input[type="submit"]{
    font-family: 'beattingvileregular';
    font-size: 4rem;
    margin: 2rem 1rem 1rem 1rem;
    padding: 0 2rem 0 1.5rem;
    border: none;
    border-radius: .5rem;
    background-color: #f8be8f;
    color: #862a0e;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
}
.submit_button{
    display: flex;
    justify-content: center;
}
.contact_footer{
    margin: 1rem
}
.text_box{
    font-family: 'Avenir';
    background-color: #fdd4b9;
    margin: 0 1rem;
    border-radius: 0 0 .5rem .5rem;
    padding: 1rem 0 0 0;
}
.text_box p{
    font-size: 1.25rem;
    text-align: left;
    margin: 0;
    padding: .5rem .5rem .5rem 1rem;
}
.text_title p{
    padding: 1rem;
    margin: 0;
}
.text_title{
    background-color: #f8be8f;
    margin: 1rem 1rem 0 1rem;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
    border-radius:  .5rem .5rem 0 0;
}
.title_link{
    color: #862a0e;
}
.portfolio p{
    margin: 0;
}
.resume p{
    margin: 0;
}
.main_img{
    display: flex;
    justify-content: center;
    background-color: #fdd4b9;
    margin: 0 1rem;
}
.main_img img{
    width: 90%;
}
.etc_img{
    display: flex;
    justify-content: center;
    background-color: #fdd4b9;
    margin: 0 1rem;
    padding: 0;
}
.etc_img img{
    width: 90%;
    padding: 1rem 0;

}
.text_port{
    font-family: 'Avenir';
    background-color: #fdd4b9;
    margin: 0 1rem;
    padding: 1rem 0 0 0;
}
.text_port p{
    font-size: 1.5rem;
    text-align: left;
    margin: 0;
    padding: .5rem .5rem .5rem 1rem;
}
.bottom_img{
    display: flex;
    justify-content: center;
    background-color: #fdd4b9;
    margin: 0 1rem;
    padding: 0 0 1rem 0;
    border-radius: 0 0 .5rem .5rem;
}
.bottom_img img{
    width: 90%;
    padding: 1rem 0;
}
.dt_gallery{
    display: none;
}
.bringemin{
    font-size: 1.25rem;
    margin: 0 1rem 1rem 1rem;
    font-family: 'Avenir';
}
.port_title{
    background-color: #f8be8f;
    margin: 1rem 1rem 0 1rem;
    filter: drop-shadow(5px 5px 5px rgb(66, 44, 39));
    border-radius:  .5rem .5rem 0 0;
    color: #862a0e;
    font-family: 'Avenir';
    padding: 1rem 1.5rem;
    font-size: large;
    font-weight: bold;
}
.port_img{
    width: 85%;
}
.portfolio_landing a{
    text-align: center;
    width: 48%;
}
.portfolio_landing{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.home_buttons div :hover{
    background-color: #862a0e;
    color: #e4805f;
}
.resume_flex a :hover{
    background-color: #862a0e;
    color: #e4805f;
}
@media (min-width: 900px){
    .menu{
        display: none;
    }
    nav{
        display: flex;
        position: absolute;
        top: 12.5%;
        right: 3%;
    }
    nav a{
        border: none;
    }
    header{
        display: flex;
    }
    .logo{
        margin: 0 1rem;
    }
    .opener_dt{
        display: inline-flex;
    }

    .main_img{
        margin: 0 0 0 1rem;
        width: 100%;
        padding: 2rem;
    }
    .text_port{
        margin: 0 1rem 0 0;
    }
    .bottom_img{
        display: none;
    }
    .etc_img{
        display: none;
    }
    .dt_gallery{
        display: flex;
        justify-content: space-between;
        background-color: #fdd4b9;
        margin: 1rem;
        padding: 2rem;
        flex-wrap: wrap;
    }
    .dt_gallery img{
        width: 40%;
        
    }
    .facebook, .insta, .email{
        width: 20%;
        padding: .5rem;
        justify-content: center;
    }
    .contact_label{
        width: 50%;
        right: 25%;
    }
    .contact_form{
        width: 100%;
        display: flex;
        justify-content: center;
        margin-top: 3rem;
    }
    .contact_form form{
        width: 46%;
    }
    
    .skills{
        width: 50%;
    }
    .education{
        width: 50%;
    }
    .resume_grid{
        display: flex;
        justify-content: space-between;
    }
    .resume_block{
        width: 60%;
        display: inline-block;
    }
    .resume_flex{
        display: flex;
        justify-content: center;
    }
    .portfolio_landing a{
        width: 25%;
    }
    .home_buttons{
        margin-bottom: 7rem;
    }
}

